--- a/style.css
+++ b/style.css
@@ -1,58 +1,71 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: "Courier New", Courier, monospace;
-  position: relative;
-  font-size: 10px;
-  background-color: rgb(62, 171, 181);
   background-image: url(images/bg-pattern-top.svg),
     url(images/bg-pattern-bottom.svg);
-  background-position: left, top right;
+  background-color: rgb(62, 171, 181);
   background-repeat: no-repeat;
-  width: 100%;
-}
+  background-size: 50%, 50%;
+  background-position: bottom left, top right;
 
-#profile-card {
-  width: 300px;
-  height: 400px;
-  border-radius: 10px;
-  position: relative;
+  /*Position of profile-card*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.profile-card {
+  background-color: white;
   background-image: url(images/bg-pattern-card.svg);
-  background-color: rgb(250, 252, 252);
-  background-position: top;
   background-repeat: no-repeat;
-  margin: 10% auto;
+  background-position: top;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 2em;
+  text-align: center;
+  width: 20%;
+  height: 50vh;
+  border-radius: 6px;
 }
 
-#display-pic {
-  border: white 5px solid;
+.card-header {
+  margin-top: 40%;
+  height: fit-content;
+}
+
+@media (max-width: 600px) {
+  .profile-card {
+    width: 50%;
+  }
+}
+
+@media (max-width: 800px) {
+  .profile-card {
+    width: 40%;
+  }
+}
+
+.pic {
   border-radius: 50%;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -100%);
 }
 
-#display-name {
-  position: absolute;
-  bottom: 30%;
-  text-align: center;
-  width: 100%;
+.stats {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: fit-content;
 }
 
-hr {
-  width: 100%;
-  background-color: black;
-}
-
-#display-name {
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.attribution {
-  font-size: 11px;
+.stat-item {
   text-align: center;
 }
-.attribution a {
-  color: hsl(228, 45%, 44%);
+
+.number {
+  display: block;
 }
